formatting cards to look better in materialize; footer gap fixed too

--- a/client/src/components/FooterBar/style.css
+++ b/client/src/components/FooterBar/style.css
@@ -1,10 +1,13 @@
 .footerCard {
-    /* padding-bottom: 100px;
-    padding-top: 60px;
-    margin-top: 100px; */
+
     background: #0f486f;
 }
 
 .buttonCard {
     background-color: #fccf43 !important;
+}
+
+.waveFooter{
+    margin-bottom: -10px !important;
+
 }
